@@ -1,2 +1,4 @@
 <a href="valid/link.html" 
    tal:attributes="href python:'/base/' + attrs['href']">blah, blah</a>
+
+<input tal:attributes="value string:a &quot;laser&quot;" />
