@@ -1,1 +1,3 @@
 <a href="/base/valid/link.html">blah, blah</a>
+
+<input value="a &quot;laser&quot;" />
